--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,6 +1,10 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
+
+.input {
+	@apply w-full text-sm px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500;
+}
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -24,7 +28,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-  text-decoration: underline;
 }
 
 body {
@@ -33,6 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #000;
 }
 
 h1 {
