--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -36,7 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #000;
+  background-color: #000 !important;
 }
 
 h1 {
