Follow/Unfollow, Profile posts, fix search users

--- a/Client/src/styles/posts.css
+++ b/Client/src/styles/posts.css
@@ -113,3 +113,8 @@ button.next {
   right: 10px;
 }
 
+.formInputC{
+  @apply w-full px-4 py-2 border border-gray-300 rounded-md 
+         focus:outline-none focus:ring-2 focus:ring-blue-500 
+         text-sm shadow-sm;
+}
